--- a/CBU_clusterGuide/guide_2run_brms_onCluster.Rmd
+++ b/CBU_clusterGuide/guide_2run_brms_onCluster.Rmd
@@ -39,6 +39,14 @@ install.packages('brms')
 install.packages('rslurm')
 ```
 
+You might also need to 
+Create a file ~/.R/Makevars
+ 
+And put the following in it:
+```{file}
+CXX14 = g++ -std=c++1y
+CXX14FLAGS = -O3 -Wno-unused-variable -Wno-unused-function –fPIC
+```
 
 # Step 1: Create script that compiles a slurm job. 
 The whole script can be found [here](https://github.com/JAQuent/bayesianMLM/blob/master/CBU_clusterGuide/logRT_model_rslurm.R).
